# markitdown-pdf-pages

./: LICENSE  README.md  pyproject.toml
markitdown_pdf_pages/: __init__.py  _plugin.py
tests/: test_plugin.py
